--- a/blog/blog_files/screen.css
+++ b/blog/blog_files/screen.css
@@ -416,7 +416,7 @@ pre {
 .blog-logo {
     text-decoration: none;
     float: left;
-    margin: -15px 0 0 0;
+    margin: -15px 10px 0 10px;
 }
 
 /* Yo-logo. Yolo-go. Upload one in ghost/settings/ */
